# APTPuzzleSolver

./: CMakeLists.txt  ConstraintsTable.cpp  ConstraintsTable.h  Exceptions.cpp  Exceptions.h  Puzzle.cpp  Puzzle.h  PuzzleMatrix.cpp  PuzzleMatrix.h  PuzzlePiece.cpp  PuzzlePiece.h  RotatePuzzle.cpp  RotatePuzzle.h  RotateSolver.cpp  RotateSolver.h  SolvabilityVerifier.cpp  SolvabilityVerifier.h  Solver.cpp  Solver.h  Steper.cpp  Steper.h  const.h  genPuzzle2.py  main.cpp  makefile  readme  students.txt
APTPuzzleSolver/: Puzzle.cpp  PuzzleMatrix.cpp  PuzzleMatrix.h  README.md  SolvabilityVerifier.cpp  Solver.cpp  Solver.h  Steper.h  const.h  genPuzzle.py  genPuzzle2.py  main.cpp
APTPuzzleSolver/Tests/: SOLUTION.txt  TEST10..out  TEST10.txt  TEST12.out  TEST12.txt  TEST13.out  TEST13.txt  TEST15.txt  TEST16_hard6by6.txt  gen3.txt  gen84.txt  testWithRotations  test_a_little_straights.txt
Tests/: 0.txt  TEST11.out  TEST11.txt  TEST14.txt  TEST15.out
